# mine_methods_peru

./: .gitignore  AGENTS.md  Readme.md
analysis/: README.md  pyproject.toml
analysis/Data/: df_peru_cleaned.csv
analysis/Docs/: DATASET_INFO.md  GUIA_PLAN.md
analysis/script/: analisis_mineria_peru.ipynb  clean_data.ipynb
frontend/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
frontend/src/components/: AnimatedCounter.tsx  Header.astro  TimelineBar.astro
frontend/src/components/charts/: B1DonutMetodos.tsx  B2HeatmapMineralMetodo.tsx  B2StackedMineralMetodo.tsx  B3RegionMetodoAbsoluto.tsx  B4StackedMetodoEscala.tsx  B5BarDesarrolloMetodo.tsx
frontend/src/components/maps/: B3MapaSitiosMineros.tsx
frontend/src/data/B1/: bloque_1_brecha_informativa.json  bloque_1_metodos_extraccion.json
frontend/src/data/B2/: bloque_2_heatmap_mineral_metodo.json  bloque_2_stacked_mineral_metodo_known.json
frontend/src/data/B3/: bloque_3_region_metodo_absoluto.json  bloque_3_sitios_mineros_muestra.geojson
frontend/src/data/B4/: bloque_4_metodo_vs_escala.json  bloque_4_metodo_vs_escala_grafica.json
frontend/src/data/B5/: bloque_5_estado_desarrollo_vs_metodo.json
frontend/src/hooks/: useInViewChart.ts
frontend/src/layouts/: Layout.astro
frontend/src/pages/: 404.astro  index.astro
frontend/src/sections/: conclusiones.astro  contextoMineria.astro  footer.astro  hero.astro  presentation.astro
frontend/src/sections/bloque_1/: b1Bloque1.astro
frontend/src/sections/bloque_2/: b2HeatmapMinerales.astro
frontend/src/styles/: global.css
(+11 files in other folders)
